# deploy_agent

./: .build-in-docker.sh  .build-release.cmd  .gitignore  Dockerfile  README.md  deploy_agent.logrotate  deploy_agent.service
sources/: Cargo.toml
sources/src/: git_repo.rs  main.rs  temp_dir.rs
