[package]
name = "deploy_agent"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
opt-level = 'z'     # Optimize for size
strip = true        # Strip symbols from binary*

[dependencies]
chrono = "0.4.38"
hostname = "0.4.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
